# oketa-cup

./: .gitignore  .pre-commit-config.yaml  Makefile  pyrightconfig.json
backend/: .env.example  README.md  conftest.py  pyproject.toml
backend/apps/accounts/: admin.py  apps.py  models.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/pool/: admin.py  apps.py  models.py  urls.py  views.py
backend/apps/pool/management/commands/: purge_group_classification_scores.py
backend/apps/pool/migrations/: 0001_initial.py  0002_add_reason_code_and_context_to_scorelog.py
backend/apps/pool/services/: scoring.py
backend/apps/pool/tests/: test_scoring.py  test_views.py
backend/apps/tournament/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
backend/apps/tournament/management/commands/: load_fixtures.py  load_teams.py  run_telegram_notifier.py  send_daily_telegram_summary.py  setup_bracket.py  sync_football_data.py
backend/apps/tournament/migrations/: 0001_initial.py  0002_nullable_teams_match_label_third_place.py  0003_add_round_of_32_phase.py  0004_add_venue_to_match.py  0005_add_next_match_to_match.py  0006_add_penalties_winner_to_match.py  0007_add_decided_in_90_to_match.py
backend/apps/tournament/services/: __init__.py  daily_telegram_summary.py  football_data_sync.py  telegram_client.py
backend/apps/tournament/tests/: test_football_data_sync.py  test_gestion.py  test_public_views.py  test_telegram_notifications.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py  test.py
backend/data/: fixtures.json
backend/locale/eu/LC_MESSAGES/: django.mo  django.po
backend/templates/: base.html
backend/templates/accounts/: login.html
backend/templates/management/: gestion.html
backend/templates/pool/: dashboard.html  select_teams.html
backend/templates/tournament/: _bracket_match.html  eliminatorias.html  grupos.html  results.html
data/: teams.json
docker/: docker-compose.prod.yml  docker-compose.yml
docs/: DEPLOY.md  (+9 more)
(+9 files in other folders)
